--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Sylvain Colignon <sylvain.colignon@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/node": "^10.11.3",
+    "@types/node": "^10.11.4",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
@@ -15,13 +15,14 @@
   },
   "dependencies": {
     "graphql-yoga": "^1.16.2",
-    "mysql": "^2.14.1",
-    "pg": "^7.4.3",
-    "reflect-metadata": "^0.1.10",
+    "mysql": "^2.16.0",
+    "pg": "^7.5.0",
+    "reflect-metadata": "^0.1.12",
+    "type-graphql": "^0.14.0",
     "typeorm": "0.2.7"
   },
   "scripts": {
     "start": "ts-node src/app.ts",
-    "dev": "nodemon --exec ts-node src/app.ts"
+    "dev": "nodemon --exec ts-node src/index.ts"
   }
 }
