--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/express-jwt": "0.0.40",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/node": "^10.11.4",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
@@ -16,6 +18,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.1",
+    "express-jwt": "^5.3.1",
     "graphql-yoga": "^1.16.2",
     "mysql": "^2.16.0",
     "pg": "^7.5.0",
