--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "pg": "^7.5.0",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.14.0",
-    "typeorm": "0.2.7"
+    "typedi": "^0.8.0",
+    "typeorm": "0.2.7",
+    "typeorm-typedi-extensions": "^0.2.1"
   },
   "scripts": {
     "start": "ts-node src/app.ts",
