--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/express-jwt": "0.0.40",
+    "@types/express": "^4.16.0",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/node": "^10.12.2",
     "nodemon": "^1.18.6",
@@ -17,14 +17,17 @@
     "typescript": "3.1.6"
   },
   "dependencies": {
+    "apollo-server": "^2.2.6",
+    "apollo-server-express": "^2.2.6",
     "bcrypt": "^3.0.2",
-    "express-jwt": "^5.3.1",
-    "graphql-yoga": "^1.16.7",
+    "express": "^4.16.4",
+    "graphql": "^14.0.2",
+    "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
     "pg": "^7.6.0",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.15.0",
-    "typedi": "^0.8.0",
+    "typedi": "^0.7.2",
     "typeorm": "0.2.8",
     "typeorm-typedi-extensions": "^0.2.1"
   },
